[package]
name = "solo-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"

# Optional for logging/debugging
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "solo-pool"
path = "src/main.rs"

[[bin]]
name = "test_miner"
path = "test_miner.rs"

